--- a/Bibliographie/Bibliographie.bib
+++ b/Bibliographie/Bibliographie.bib
@@ -204,3 +204,86 @@ Two-Wheeled Inverted Pendulum Robot},
   year={2015},
   publisher={Springer}
 }
+
+
+@inproceedings{zimit2018modelling,
+  title={Modelling and experimental analysis two-wheeled self balance robot using PID controller},
+  author={Zimit, Aminu Yahaya and Yap, Hwa Jen and Hamza, Mukhtar Fatihu and Siradjuddin, Indrazno and Hendrik, Billy and Herawan, Tutut},
+  booktitle={Computational Science and Its Applications--ICCSA 2018: 18th International Conference, Melbourne, VIC, Australia, July 2-5, 2018, Proceedings, Part II 18},
+  pages={683--698},
+  year={2018},
+  organization={Springer}
+}
+
+
+@misc{anderson2003nbot,
+  title={NBot Balancing Robot, a two wheel balancing robot},
+  author={Anderson, DP},
+  journal={2003-05-19)[200-07-10]. http://www. geology. smu. edu/\~{} dpa-www/robo/nbot/index. html},
+  year={2003}
+}
+
+@inproceedings{bloch1999stabilization,
+  title={Stabilization of the pendulum on a rotor arm by the method of controlled Lagrangians},
+  author={Bloch, Anthony M and Leonard, Naomi Ehrich and Marsden, Jerrold E},
+  booktitle={Proceedings 1999 IEEE International Conference on Robotics and Automation (Cat. No. 99CH36288C)},
+  volume={1},
+  pages={500--505},
+  year={1999},
+  organization={IEEE}
+}
+
+
+@inproceedings{azimi2013model,
+  title={Model predictive control for a two wheeled self balancing robot},
+  author={Azimi, Mohammad Mahdi and Koofigar, Hamid Reza},
+  booktitle={2013 First RSI/ISM International Conference on Robotics and Mechatronics (ICRoM)},
+  pages={152--157},
+  year={2013},
+  organization={IEEE}
+}
+
+
+@article{cui2021learning,
+  title={Learning-based balance control of wheel-legged robots},
+  author={Cui, Leilei and Wang, Shuai and Zhang, Jingfan and Zhang, Dongsheng and Lai, Jie and Zheng, Yu and Zhang, Zhengyou and Jiang, Zhong-Ping},
+  journal={IEEE Robotics and Automation Letters},
+  volume={6},
+  number={4},
+  pages={7667--7674},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{xu2020adaptive,
+  title={Adaptive impedance control with variable target stiffness for wheel-legged robot on complex unknown terrain},
+  author={Xu, Kang and Wang, Shoukun and Yue, Binkai and Wang, Junzheng and Peng, Hui and Liu, Dongchen and Chen, Zhihua and Shi, Mingxin},
+  journal={Mechatronics},
+  volume={69},
+  pages={102388},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{raj2022comprehensive,
+  title={A comprehensive study of mobile robot: history, developments, applications, and future research perspectives},
+  author={Raj, Ravi and Kos, Andrzej},
+  journal={Applied Sciences},
+  volume={12},
+  number={14},
+  pages={6951},
+  year={2022},
+  publisher={MDPI}
+}
+
+
+@article{kuutti2020survey,
+  title={A survey of deep learning applications to autonomous vehicle control},
+  author={Kuutti, Sampo and Bowden, Richard and Jin, Yaochu and Barber, Phil and Fallah, Saber},
+  journal={IEEE Transactions on Intelligent Transportation Systems},
+  volume={22},
+  number={2},
+  pages={712--733},
+  year={2020},
+  publisher={IEEE}
+}
