--- a/Content/Modelling and Simulation.tex
+++ b/Content/Modelling and Simulation.tex
@@ -250,46 +250,46 @@ Since the knee wheel link, the hip knee link and the body are assumed to be cubo
 		C_{22}(\theta) = m_B^2 l^2 \cos(\theta),
 	\end{equation}
 	\begin{equation}
-		C_{23}(\theta) = m_B^2 l^2 + (m_B + 2m_W + \frac{2J}{r^2}) (I_3 - I_1 - m_B l^2) \cos(\theta).
+		C_{23}(\theta) = (m_B^2 l^2 + (m_B + 2m_W + \frac{2J}{r^2}) (I_3 - I_1 - m_B l^2) )\cos(\theta).
 	\end{equation}
 	\begin{equation}
-		C_{31}(\theta) = 2 (I_3 - I_1 - m_B^2) \cos(\theta),
+		C_{31}(\theta) = 2 (I_3 - I_1 - m_Bl^2) \cos(\theta),
 	\end{equation}
 	\begin{equation}
-		C_{31} = m_B l,
+		C_{31}(\theta)  = m_B l,
 	\end{equation}
 	\begin{equation}
-		D_{11}(\theta) = \frac{(I_2 + m_B^2) 2c_\alpha}{r^2} - \frac{m_B \cos(\theta) 2c_\alpha}{r},
+		D_{11}(\theta) = \frac{(I_2 + m_Bl^2) 2c_\alpha}{r^2} - \frac{m_B l \cos(\theta) 2c_\alpha}{r},
 	\end{equation}
 	\begin{equation}
-		D_{12}(\theta) = \frac{(I_2 + m_B^2) 2c_\alpha}{r} - 2m_B \cos(\theta) c_\alpha,
+		D_{12}(\theta) = \frac{(I_2 + m_Bl^2) 2c_\alpha}{r} - 2m_B l \cos(\theta) c_\alpha,
 	\end{equation}
 	\begin{equation}
-		D_{21}(\theta) = \frac{(m_B + 2m_W + \frac{2J}{r^2}) 2c_\alpha}{r} + \frac{m_B \cos(\theta) 2c_\alpha}{r^2},
+		D_{21}(\theta) = \frac{(m_B + 2m_W + \frac{2J}{r^2}) 2c_\alpha}{r} + \frac{m_B l \cos(\theta) 2c_\alpha}{r^2},
 	\end{equation}
 	\begin{equation}
-		D_{22}(\theta) = \frac{(m_B + 2m_W + \frac{2J}{r}) 2c_\alpha + m_B \cos(\theta) 2c_\alpha}{r},
+		D_{22}(\theta) = \frac{(m_B + 2m_W + \frac{2J}{r}) 2c_\alpha + m_B l \cos(\theta) 2c_\alpha}{r},
 	\end{equation}
 	\begin{equation}
-		D_{33}(\theta) = \frac{d^2}{2r^2 c_\alpha},
+		D_{33}(\theta) = \frac{d^2 c_\alpha}{2r^2 },
 	\end{equation}
 	\begin{equation}
-		B_{1} = \frac{(I_2 + m_B^2) \frac{1}{r} + m_B \cos(\theta)}{r},
+		B_{1} = (I_2 + m_Bl^2) \frac{1}{r} + m_B l \cos(\theta),
 	\end{equation}
 	\begin{equation}
-		B_{2} = \frac{m_B l}{r} - \cos(\theta) + m_B + 2m_W + \frac{2J}{r^2},
+		B_{2} = \frac{m_B l \cos(\theta)}{r} + m_B + 2m_W + \frac{2J}{r^2},
 	\end{equation}
 	\begin{equation}
 		B_{3} = \frac{d}{2r},
 	\end{equation}
 	\begin{equation}
-		V_{1} = (m_B + 2m_W + \frac{2J}{r^2}) (I_2 + m_B^2) - m_B^2 \cos^2(\theta),
+		V_{1} = (m_B + 2m_W + \frac{2J}{r^2}) (I_2 + m_Bl^2) - m_B^2l^2 \cos^2(\theta),
 	\end{equation}
 	\begin{equation}
-		V_{2} = I_3 + 2K + (m_W + \frac{J}{r^2}) \frac{d^2}{2} - (I_3 - I_1 - m_B^2) \sin^2(\theta).
+		V_{2} = I_3 + 2K + (m_W + \frac{J}{r^2}) \frac{d^2}{2} - (I_3 - I_1 - m_Bl^2) \sin^2(\theta).
 	\end{equation}
 
-
+The functions $B_i: \mathbb{R} \rightarrow \mathbb{R}$, $C_{ij}: \mathbb{R} \rightarrow \mathbb{R}$, $D_{ij}: \mathbb{R} \rightarrow \mathbb{R}$, and $V_i: \mathbb{R} \rightarrow \mathbb{R}$, $i,j \in \{1,2,3\}$, depends on the parameters in table \ref{tab:parameters}.
 	\begin{table}[h]
 		\centering
 		\caption{Parameters of the mechanical system}
@@ -298,14 +298,14 @@ Since the knee wheel link, the hip knee link and the body are assumed to be cubo
 			\toprule
 			Parameter & Value & Description \\
 			\midrule
-			$m_B$ & 2.5 kg & mass of the pendulum body \\
+			$m_B$ & 0.5 kg & mass of the pendulum body \\
 			$m_W$ & 0.636 kg & mass of a wheel \\
-			$l$ & 0.026 m & distance between the wheel axis and the pendulum's center of gravity \\
+			$l$ & - & distance between the wheel axis and the pendulum's center of gravity \\
 			$d$ & - & distance between the two wheels \\
 			$J$ & \(5.175 e^{-4}\) kgm\textsuperscript{2} & moment of inertia of a wheel w.r.t. Reference frame \{C\} in direction of \(c_2\) \\
 			$K$ & - & moment of inertia of a wheel w.r.t. reference frame \{C\} in direction of \(c_3\) \\
 			$I_1$ & - & moment of inertia of pendulum's body w.r.t. Reference frame \{B\} in direction of \(b_1\) \\
-			$I_2$ & \(0.0165\) kgm\textsuperscript{2} & moment of inertia of pendulum's body w.r.t. Reference frame \{B\} in direction of \(b_2\) \\
+			$I_2$ & - & moment of inertia of pendulum's body w.r.t. Reference frame \{B\} in direction of \(b_2\) \\
 			$I_3$ & - & moment of inertia of pendulum's body w.r.t. Reference frame \{B\} in direction of \(b_3\) \\
 			$c_\alpha$ & \(4.630 e^{-4}\) Nms & viscous friction coefficient \\
 			\bottomrule
@@ -543,7 +543,7 @@ where The code \ref{lst:Changing the knee and hip angles of the robot} Shows the
 \end{lstlisting}
 In the above code \ref{lst:Changing the knee and hip angles in the dynamics and retuning the controller} It hows the function that changes the knee and hip angles in the dynamics and retunes the controller.
 
-
+\newpage
 \section{Simulation Analysis}
 %\begin{itemize}
 %	\item \textbf{Controller Responses:} Analysis of step response and responses to other inputs using one of the controllers in different configurations.
